# ai-workbench

./: .gitignore  LICENSE  README.md  config.yaml  example.py  example2.py  lcel-experiment.py  main.py  pyproject.toml  setup.py  transcription-example.py  transcription_poc.py  url_conversion.py
ai_model_core/: __init__.py  base.py  factory.py  utils.py
ai_model_core/config/: config.yaml  credentials.py  settings.py
ai_model_core/model_helpers/: RAG_assistant.py  __init__.py  base_assistant_ui.py  chat_assistant.py  chat_assistant_ui.py  embeddings.py  prompt_assistant.py  rag_assistant_ui.py  summarize_assistant.py  transcription_assistant.py  vision_assistant.py
ai_model_core/shared_utils/: __init__.py  content_coordinator.py  content_loader.py  content_processor.py  factory.py  message_processing.py  message_types.py  model_provider.py  model_registry.py  prompt_utils.py  utils.py
ai_model_interface/: __init__.py  base.py  factory.py  utils.py
ai_model_interface/config/: config-schema.json  config.yaml  credentials.py  settings.py
ai_model_interface/model_helpers/: RAG_assistant.py  anthropic.py  chat_assistant.py  vision_assistant.py
ai_model_interface/models/: anthropic.py  ollama.py  openai.py
notetaking_conversion/: gradio_implementation.py  langchain_analyze_images.py  note_converter.py  prompts.json
tests/: assistants_test.py  conftest.py  test_enhanced_content_loader.py  test_note_converter.py
tests/chat_assistant/: test_chat_assistant.py
tests/model_helpers/: conftest.py  test_RAG_assistant.py  test_chat_assistant.py  test_format_validation.py
