[tool.poetry]
name = "AI workbench"
version = "0.1.0"
description = "By offering a range of models and features like prompt reusability and flexible experimentation, this AI workbench streamlines complex tasks and fosters rapid innovation."
authors = ["Sytse van der Schaaf <sytse@svdschaaf.nl>"]
packages = [{include = "ai_model_core"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
tqdm = "^4.65.0"
pyyaml = "^6.0"
ollama = "^0.2.1"
Pillow>= "8.0.0"
gradio = "^4.38.1"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.17"
langchain-anthropic = "^0.1.21"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"