[tool.poetry]
name = "AI workbench"
version = "0.1.0"
description = "By offering a range of models and features like prompt reusability and flexible experimentation, this AI workbench streamlines complex tasks and fosters rapid innovation."
authors = ["Sytse van der Schaaf <sytse@svdschaaf.nl>"]
packages = [{include = "ai_model_core"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
tqdm = "^4.65.0"
pyyaml = "^6.0"
ollama = "^0.2.1"
Pillow = "8.0.0"
gradio = "^4.38.1"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.17"
langchain-anthropic = "^0.1.21"
langgraph = "^0.2.19"
pypdf = "^4.3.1"
sentence-transformers = "^3.1.0"
faiss-cpu = "^1.8.0.post1"
beautifulsoup4 = "^4.12.3"
docx2txt = "^0.8"
pymupdf = "^1.24.10"
pytesseract = "^0.3.13"
openai-whisper = "^20240930"
whisper = "^1.1.10"
mistralai = "^1.1.0"
pytest-asyncio = "^0.24.0"
moviepy = "^1.0.3"
yt-dlp = "^2024.11.18"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"